lib_adt_tests_TESTS = \
    lib/adt/tests/test_iord_map \
    lib/adt/tests/test_ilist

check_PROGRAMS += ${lib_adt_tests_TESTS}

lib_adt_tests_test_iord_map_LDADD = $(TEST_LDADD)
lib_adt_tests_test_iord_map_CFLAGS = $(TEST_CFLAGS)

lib_adt_tests_test_ilist_LDADD = $(TEST_LDADD)
lib_adt_tests_test_ilist_CFLAGS = $(TEST_CFLAGS)
