filterxjitincludedir = ${pkgincludedir}/filterx/jit

EXTRA_DIST += lib/filterx/jit/CMakeLists.txt

filterxjitinclude_HEADERS = \
	lib/filterx/jit/jit.h \
	lib/filterx/jit/jit-private.h \
	lib/filterx/jit/ffi.h

filterxjit_sources = \
	lib/filterx/jit/jit.c \
	lib/filterx/jit/ffi.c \
	lib/filterx/jit/jit-runtime.c

filterxjit_bitcode_sources = \
	lib/filterx/jit/jit-runtime.c
